added navigation and styling

--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,24 @@ img {
     border-width: 10px;
     border-color: black;
 }
+img:hover {
+    border-style: dashed;
+}
 a { 
     color: white;
     font-size: large;
     text-decoration: none;
+}
+#main-nav {
+    background-color: black;
+    text-align: center;
+    padding: 10px;
+}
+#main-nav a {
+    font-size: 24px;
+    margin: 20px;
+}
+#main-nav a:hover {
+    text-decoration: underline;
+    color: blue;
 }
