--- a/styles.css
+++ b/styles.css
@@ -25,4 +25,43 @@
 body {
     margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(241, 191, 130);
+}
+.user-nav {
+    display: flex;
+    flex-flow: row wrap;
+}
+.user-nav a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.2em;
+    padding: 0.7em;
+}
+
+.dropdown {
+    position: relative;
+}
+.dropdown a {
+    display: block;
+}
+.dropdown a::after {
+    content: "\25bc";
+    font-size: 0.5em;
+}
+
+.dropdown-menu {
+    position: absolute;
+    top: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    background-color: bisque;
+    max-height: 0px;
+    overflow: hidden;
+    min-width: 100%;
+}
+.dropdown:hover .dropdown-menu {
+    max-height: 50vh;
+}
+.dropdown-menu a {
+    white-space: nowrap;
 }
