--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body {
     margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(241, 191, 130);
+    overflow-y: scroll;
 }
 .user-nav {
     display: flex;
@@ -95,4 +96,28 @@ body {
 .site-search button {
     padding: 0.5em;
     border: 1px solid transparent;
+}
+.slide img {
+    max-width: 100%;
+    aspect-ratio: 16/6;
+    object-fit: cover;
+    object-position: center;
+}
+.slide {
+    width: 100%;
+}
+/* content */
+.featured-grid {
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    margin-top: 3em;
+    margin-left: 3em;
+    margin-right: 3em;
+    gap: 2em;
+}
+.card-image {
+    max-width: 100%;
+}
+.col-4 {
+    grid-column: span 4;
 }
