added responsiveness for mobile

--- a/responsive.css
+++ b/responsive.css
@@ -45,4 +45,12 @@
     .slide img {
         aspect-ratio: 1/1;
     }
+    .featured-grid {
+        grid-template-columns: 1fr;
+        margin-left: 1em;
+        margin-right: 1em;
+    }
+    .col-4, .col-3 {
+        grid-column: span 1;
+    }
 }
