created contact page and css

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,11 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(241, 191, 130);
     overflow-y: scroll;
+    min-height: 100vh;
+}
+.contact-page {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 }
 .user-nav {
     display: flex;
@@ -133,6 +138,7 @@ body {
     text-align: center;
     text-decoration: none;
     border-radius: 10px;
+    width: 100%;
 }
 .col-4 {
     grid-column: span 4;
@@ -154,6 +160,7 @@ body {
     justify-content: center;
     gap: 2em;
     width: 100%;
+    margin-bottom: 1em;
 }
 .footer-container {
     padding: 2em 4em; 
@@ -174,4 +181,24 @@ body {
 .footer-nav h4 {
     padding: 0.7em;
     margin: 0px;
+}
+#contact-form label {
+    display: block;
+}
+#contact-form input {
+    display: block;
+    width: 100%;
+    margin-bottom: 1em;
+    padding: 0.5em;
+    box-sizing: border-box;
+}
+#contact-form textarea {
+    display: block;
+    width: 100%;
+    padding: 0.5em;
+    box-sizing: border-box;
+    margin-bottom: 1em;
+}
+#map {
+    width: 100%
 }
